--- a/_posts/2012-07-11-javascript-application-frameworks.textile
+++ b/_posts/2012-07-11-javascript-application-frameworks.textile
@@ -16,15 +16,15 @@ There is a "repository on Github":https://github.com/addyosmani/todomvc that inc
 
 This is my shoddy and ill-informed summary of the implementations:
 
-"AngularJS":http://addyosmani.github.com/todomvc/architecture-examples/angularjs/index.html#/. Has very readable HTML source, consisting of normal HTML tags with _ng_ attributes, like _ng-show_, _ng-click_, _ng-model_ _ng-repeat_ and so on, and user-defined attributes (in this case, like _todo-blur_ and _todo-focus_), which together determine behaviour (in other words, they do the data binding). The javascript is divided up into different files under folders that include _controllers_, _directives_, _libs_ and _services_. I sort of prefer my javascript all in one place, but on larger projects this looks like it could keep things tidy. And the source of this application is very tidy indeed. Most of the application-specific code is all in _controllers/todoCtrl.js_ and there are only 40 or so lines of it. It's all pretty obvious where the behaviour in the HTML attributes comes from and the code is very readable. I quite like it, as do "some":http://net.tutsplus.com/tutorials/javascript-ajax/5-awesome-angularjs-features/ "other":http://sotomajor.org.ua/7-reasons-why-angularjs-rocks people. It has come out of Google.
+"AngularJS":http://addyosmani.github.com/todomvc/architecture-examples/angularjs/index.html#/. Has very readable HTML source, consisting of normal HTML tags with _ng_ attributes, like _ng-show_, _ng-click_, _ng-model_ _ng-repeat_ and so on, and user-defined attributes (in this case, like _todo-blur_ and _todo-focus_), which together determine behaviour (in other words, they do the data binding). The javascript is divided up into different files under folders that include _controllers_, _directives_, _libs_ and _services_. I sort of prefer my javascript all in one place, but on larger projects this looks like it could keep things tidy. And the source of this application is very tidy indeed. Most of the application-specific code is in _controllers/todoCtrl.js_ and there are only 40 or so lines of it. It's all pretty obvious where the behaviour in the HTML attributes comes from and the code is very readable. I quite like it, as do "some":http://net.tutsplus.com/tutorials/javascript-ajax/5-awesome-angularjs-features/ "other":http://sotomajor.org.ua/7-reasons-why-angularjs-rocks people. AngularJS has been written by a team at Google.
 
-"Backbone.js":http://addyosmani.github.com/todomvc/architecture-examples/backbone/index.html. There is less going on in the HTML source. It is not very clear what is going on in the background. The source contains separate template markup. The JavaScript is split up into several folders. Most of the code is in _views/app.js_ and _views/todos.js_ . It's readable code, but not as terse as AngularJS, nor is the connexion as clear between the markup and the behaviour of the application. For  "Backbone.js + RequireJS":http://addyosmani.github.com/todomvc/dependency-examples/backbone_require/index.html the template fragments are moved out of the HTML markup and into separate template files.
+"Backbone.js":http://addyosmani.github.com/todomvc/architecture-examples/backbone/index.html. There is less going on in the HTML source. It is not very clear what is going on in the background. The source contains separate template markup. The JavaScript is split up into several folders. Most of the code is in _views/app.js_ and _views/todos.js_ . It's readable code, but not as terse as AngularJS, nor is the connexion as clear between the markup and the behaviour of the application. For  "Backbone.js + RequireJS":http://addyosmani.github.com/todomvc/dependency-examples/backbone_require/index.html the template fragments are moved out of the HTML markup and into separate template files. Backbone has been around a little longer than most of the other frameworks, is more widely used and was developed as part of the "DocumentCloud":http://www.documentcloud.org/ project by, among others, Jeremy Ashkenas, creator of CoffeeScript.
 
-"Ember":http://addyosmani.github.com/todomvc/architecture-examples/emberjs/index.html. There is a wonderful simplicity to the Ember application. Just one HTML page and one app.js file. The HTML content is made up almost entirely of _{ {#view} }_ and _{ {#collection} }_ handlers with no embedded HTML markup at all (I expect Avi would approve). It is not quite as terse as AngularJS, but it is not far off. Very nice.
+"Ember":http://addyosmani.github.com/todomvc/architecture-examples/emberjs/index.html. There is a wonderful simplicity to the Ember application. Just one HTML page and one app.js file. The HTML content is made up almost entirely of _{ {#view} }_ and _{ {#collection} }_ handlers with no embedded HTML markup at all (I expect Avi would approve). It is not quite as terse as AngularJS, but it is not far off. Very nice. Written by a team at Tilde, including Yehuda Katz of Merb and Ruby on Rails fame.
 
-"Spine":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. And "some people prefer Spine over AngularJS":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/.
+"Spine":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. And "some people prefer Spine over AngularJS":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/. Written by by Alex MacCaw to accompany his O'Reilly book on JavaScript web applications.
 
-"Knockout (MVVM)":http://addyosmani.github.com/todomvc/architecture-examples/knockoutjs/index.html. Data binding is done in the HTML markup, rather like AngularJS, with _data-bind_ attributes. Also, like Ember.js, the source is all contained in a single file. But with function calls like _ko.bindingHandlers.hasfocus.init_ it gives the appearance of being a bit more low-level than some other frameworks, at least to a simple-minded amateur like me. On the other hand, someone recently commented that "it's quite similar to AngularJS and Ember, but feels more mature than either, and has great documentation":http://news.ycombinator.com/item?id=4147035. It has come out of Microsoft.
+"Knockout (MVVM)":http://addyosmani.github.com/todomvc/architecture-examples/knockoutjs/index.html. Data binding is done in the HTML markup, rather like AngularJS, with _data-bind_ attributes. Also, like Ember.js, the source is all contained in a single file. But with function calls like _ko.bindingHandlers.hasfocus.init_ it gives the appearance of being a bit more low-level than some other frameworks, at least to a simple-minded amateur like me. On the other hand, someone recently commented that "it's quite similar to AngularJS and Ember, but feels more mature than either, and has great documentation":http://news.ycombinator.com/item?id=4147035. Written by Steven Sanderson at Microsoft.
 
 Of the others, "Dojo":http://addyosmani.github.com/todomvc/architecture-examples/dojo/index.html possibly asks too much of the developer, "Closure":http://addyosmani.github.com/todomvc/architecture-examples/closure/index.html#/ looks like it requires a fair bit of development overhead, but as it is used for Gmail and other Google applications it is likely to be a good choice for _serious_ applications (nothing I am likely to build, then). "YUILibrary":http://addyosmani.github.com/todomvc/architecture-examples/yuilibrary/index.html is not terribly readable. "Knockback.js":http://addyosmani.github.com/todomvc/architecture-examples/knockback/index.html might have made sense if I liked the Knockout way of doing things, already used Backbone.js and wanted to develop in CoffeeScript. "Agility.js":http://addyosmani.github.com/todomvc/architecture-examples/agilityjs/index.html looks simple and readable. "Google Web Toolkit":http://addyosmani.github.com/todomvc/architecture-examples/gwt/index.html is Java: forget it. And "jQuery":http://addyosmani.github.com/todomvc/architecture-examples/jquery/index.html on its own is actually not too verbose. It is still worth considering if I am not doing anything too fancy.
 
