--- a/_posts/2012-07-11-javascript-application-frameworks.textile
+++ b/_posts/2012-07-11-javascript-application-frameworks.textile
@@ -22,7 +22,7 @@ This is my shoddy and ill-informed summary of the implementations:
 
 "Ember":http://addyosmani.github.com/todomvc/architecture-examples/emberjs/index.html. There is a wonderful simplicity to the Ember application. Just one HTML page and one app.js file. The HTML content is made up almost entirely of _{ {#view} }_ and _{ {#collection} }_ handlers with no embedded HTML markup at all (I expect Avi would approve). It is not quite as terse as AngularJS, but it is not far off. Very nice. Written by a team at Tilde, including Yehuda Katz of Merb and Ruby on Rails fame.
 
-"Spine":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. And "some people prefer Spine over AngularJS":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/. Written by by Alex MacCaw to accompany his O'Reilly book on JavaScript web applications.
+"Spine":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. And "some people prefer Spine over AngularJS":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/. Written by Alex MacCaw to accompany his O'Reilly book on JavaScript web applications.
 
 "Knockout (MVVM)":http://addyosmani.github.com/todomvc/architecture-examples/knockoutjs/index.html. Data binding is done in the HTML markup, rather like AngularJS, with _data-bind_ attributes. Also, like Ember.js, the source is all contained in a single file. But with function calls like _ko.bindingHandlers.hasfocus.init_ it gives the appearance of being a bit more low-level than some other frameworks, at least to a simple-minded amateur like me. On the other hand, someone recently commented that "it's quite similar to AngularJS and Ember, but feels more mature than either, and has great documentation":http://news.ycombinator.com/item?id=4147035. Written by Steven Sanderson at Microsoft.
 
