--- a/_posts/2012-12-01-learning-a-language.textile
+++ b/_posts/2012-12-01-learning-a-language.textile
@@ -10,11 +10,15 @@ I have been trying to learn Italian recently. Progress has been a bit slow, but 
 
 *Flashcards*. I now use "Flashcards Deluxe":http://orangeorapple.com/Flashcards/ (although I previousy used "StickyStudy Flash":http://www.stickystudy.com/flash.html) for iPhone, which aside from having an extraordinary number of configuration options, has the capacity to preload TTS (text-to-speech) for an entire set of flashcards in any one of a number of languages. I am using this to build up my vocabulary in advance of stepping up the reading and film watching.
 
-It has been surprisingly hard for me to find vocabulary lists that I am entirely happy with. The general quality on the various flashcard exchange sites has been generally quite poor. Finding good ones is hard and time-consuming. In general, I have been creating my own, sometimes based on sets that I have found online. The "Edexcel Italian vocabulary book":http://www.edexcel.com/migrationdocuments/GCSE%20New%20GCSE/Italian-Vocab-Book.doc contains the vocabulary list that I have got the most use from.
+It has been surprisingly hard for me to find vocabulary lists that I am entirely happy with. The overall quality on the various flashcard exchange sites is generally quite poor. Finding good flashcards in amongst the dross is hard and time-consuming. My favourite vocabulary lists are are at "ielanguages.com":http://www.ielanguages.com/. I particularly like the "Romance Languages Vocabulary Lists":http://www.ielanguages.com/romlang.html (perhaps when I have learnt the Italian vocabulary I can use it as the basis for learning French and Spanish, too).
 
 I have tried several language apps for iPhone, including Mosalingua, Mindsnacks, Superflashcard, Babbel and Busuu, none of which I liked. In every case the interface got in the way of my learning in one way or other and was too prescriptive for my requirements.
 
-The plan now is to spend an hour every day doing flashcards and also whenever I have a minute or two free to get my phone out of my pocket.
+I am now using a set of just under 1,000 flashcards based on Wiktionary's "list of 1,000 most frequently-used Italian words":http://en.wiktionary.org/wiki/Wiktionary:Frequency_lists/Italian1000 along with flashcards based on the ielanguages vocabulary lists.
+
+There is some debate on the use of flashcards. Some people find them crushingly boring. Others have argued that trying to create a one-to-one correspondence between vocabulary in a reference language and the language being learnt is counterproductive. If flashcards are to be used at all, then they should use pictures not native vocabulary. All I can say is that I quite like flashcards. Also, I see English as a scaffolding to use while I am building up a new language. I expect it to fall away after a while.
+
+Anyway, my plan now is to spend an hour every day doing flashcards and also whenever I have a minute or two free to get my phone out of my pocket. I am going to start by translating out of Italian and into English, in order to get me to a point where I can make sense of films and television.
 
 *Reading*. My vocabulary is still quite thin. Once it improves, I intend to start reading regularly, starting with current newspaper articles. The trick will be to use a touch-sensitive Kindle loaded with an Italian dictionary (I am using "this one":http://www.amazon.co.uk/Electronic-Italian-Dictionary-Dictionaries-ebook/dp/B005BZKRPW) and to import content from Calibre. Every word or phrase that I don't understand, I highlight. The highlighted words or phrases are then available via "Amazon's Kindle site":https://kindle.amazon.com/your_highlights. I copy and paste all the highlights into a text editor, cut the extraneous copy, add the translations and add them to a flashcard list, which I then go through on my phone. It would be nice if this could be automated a bit more, but this should work pretty well for now.
 
